fix: dark mode for skills

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -17,6 +17,7 @@
     --footer-color: var(--grey);
     --underline-color: var(--light-grey);
     --footer-hover-color: var(--black);
+    --card-color: var(--black);
     color-scheme: light;
   }
 
@@ -26,6 +27,7 @@
     --footer-color: var(--soft-grey);
     --underline-color: var(--light-grey);
     --footer-hover-color: var(--white);
+    --card-color: var(--white);
     color-scheme: dark;
   }
 }
